# intent-forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  intent-driven.md  pyproject.toml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.ps1  create-release-packages.sh
docs/: README.md
docs/en/: CONTRIBUTING.md  README.md  SUPPORT.md  intent-driven.md
memory/: constitution.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
src/intent_cli/: __init__.py
templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md  vscode-settings.json
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md  taskstoissues.md
