[project]
name = "intent-cli"
version = "0.1.0"
description = "Intent CLI - 意图驱动开发工具包的命令行工具"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
intent = "intent_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intent_cli"]
